--- a/project1.html
+++ b/project1.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div>
-        <h1><center>Music Player</center></h1>
-        <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWN8ZW58MHx8MHx8fDA%3D" alt="dj">
+        <h1>Music Player</h1>
+        <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWN8ZW58MHx8MHx8fDA%3D" alt="dj" width="500px"> <br>
         <input type="range"> 30:00 <br>
         <i class="fa-solid fa-caret-left"></i>
         <i class="fa-solid fa-music"></i>
